# physics_automata

./: .gitignore  CMakeLists.txt  README.md
src/: element.hpp  main.cpp  simulation.cpp  simulation.hpp
